fix :: Fixes in dropdown menu regarding extra margin of 20 px
ref #642

--- a/modules/mod_paycart_menu/media/css/style.css
+++ b/modules/mod_paycart_menu/media/css/style.css
@@ -23,12 +23,6 @@
   margin: 0;
 }
 
-.pc-mod-menu .navbar-nav>li>.pc-menu-categories {
-    margin-top:20px;
-    border-top-left-radius:4px;
-    border-top-right-radius:4px;
-}
-
 .pc-mod-menu .navbar-default .navbar-nav>li>a {
     width:200px;
     font-weight:bold;
